# django-chatting

./: .python-version  dump.rdb  pyproject.toml
chating/: consumers.py  routing.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py
messenger/messenger/: settings.py  urls.py
templates/: room.html
